<resources>
    <string name="app_name">memorization</string>

    <string name="menu_home">Home</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="center_name">Center Name</string>
    <string name="address_center">center Address</string>
    <string name="branch_center">center Branch</string>
    <string name="memo_group">Memo Group</string>
    <string name="home">Home</string>
    <string name="identification_number">identification</string>
    <string name="memorization_center">Center Memorization</string>
    <string name="all_data">All Data</string>
    <string name="setting_app">Setting App</string>
    <string name="message_student">Message Student</string>
    <string name="sign_out">Sign Out</string>
    <string name="address">Address</string>
    <string name="name_center_memorization">Name Center Memorization</string>
    <string name="number_of_groups_allowed">Number of groups allowed</string>
    <string name="save">Save</string>
    <string name="name_group">Name Group</string>
    <string name="supervisor">Supervisor</string>
    <string name="branch">Branch</string>
    <string name="list_student">List Student</string>
    <string name="list_wallets">List Wallets</string>
    <string name="memorization_group_name">Memorization group name</string>
    <string name="number_of_students_allowed">Number of Students Allowed</string>
    <string name="description_group">Description Group</string>
    <string name="wallets_name">Wallets Name</string>
    <string name="list_group">List Group</string>
    <string name="student_name">Student Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="center">Center</string>
    <string name="group">Group</string>
    <string name="tasks">Tasks</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="password">Password</string>
    <string name="rePassword">RePassword</string>
    <string name="student_overall_evaluation">Student Overall Evaluation</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="exam_student">Exam Student</string>
    <string name="evaluation">Evaluation</string>
    <string name="feedback_on_the_evaluation">Feedback on the Evaluation</string>
    <string name="task_end_date">Task End Date</string>
    <string name="birth_day">Birth Day</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_new_supervisor">Add New Supervisor</string>
    <string name="supervisor_name">Supervisor Name</string>
    <string name="title_activity_show_maps">ShowMapsActivity</string>
    <string name="all_wallet">All Wallet</string>
    <string name="all_group">All Group</string>
    <string name="all_student">All Student</string>
    <string name="wallets">wallets</string>
    <string name="groups">Groups</string>
    <string name="students">Students</string>
    <string name="login">Login</string>
    <string name="new_user">New user ?</string>
    <string name="register_now">Register now</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="sync_data">Sync Data</string>
    <string name="profile">Profile</string>
    <string name="activate_message_mode">Activate message mode</string>
    <string name="sender">Sender</string>

    <string name="please_enter_a_message">Please Enter a Message</string>
    <string name="send_message">Send Message</string>
    <string name="supervisors">Supervisors</string>
    <string name="enter_the_old_password">Enter the old password</string>
    <string name="confirm_the_new_password">Confirm the new password</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="enter_the_new_password">Enter the new password</string>
    <string name="unactivate_message_mode">UnActivate message mode</string>

</resources>