<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog_change_password">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/cairo_bold"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_et_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_light"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/enter_the_old_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_light"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/enter_the_new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/t2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_et_confirm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_light"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_the_new_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/change_password_btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_overall"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

</androidx.constraintlayout.widget.ConstraintLayout>