<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="6dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        >

        <ImageView
            android:id="@+id/custom_wallets_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@drawable/icon_test"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/custom_supervisor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/custom_wallets_img"
            android:fontFamily="@font/cairo_bold"
            android:padding="6dp"
            android:text="@string/supervisor_name" />

        <TextView
            android:id="@+id/custom_supervisor_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/custom_wallets_img"
            android:layout_below="@+id/custom_supervisor_name"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cairo_light"
            android:padding="3dp"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/custom_supervisor_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/custom_supervisor_phone_number"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/custom_wallets_img"
            android:fontFamily="@font/cairo_light"
            android:padding="3dp"
            android:text="@string/branch" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>