<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="6dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        >

        <ImageView
            android:id="@+id/custom_wallets_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@drawable/icon_test"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />


        <TextView
            android:id="@+id/custom_wallets_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/custom_wallets_img"
            android:fontFamily="@font/cairo_bold"
            android:padding="3dp"
            android:text="@string/wallets_name" />

            <TextView
                android:id="@+id/custom_wallets_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:layout_below="@+id/custom_wallets_name"
                android:layout_toEndOf="@+id/custom_wallets_img"
                android:fontFamily="@font/cairo_light"
                android:text="Phone Number" />

        <TextView
            android:id="@+id/custom_wallets_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_wallets_phone_number"
            android:layout_margin="3dp"
            android:layout_toEndOf="@+id/custom_wallets_img"
            android:fontFamily="@font/cairo_light"
            android:padding="3dp"
            android:text="@string/branch" />


        <LinearLayout
            android:id="@+id/custom_wallet_linear_list_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_wallets_phone_number"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FCFCFC"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_wallets_list_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/cairo_bold"
                android:padding="3dp"
                android:textColor="@color/black"
                android:text="@string/list_group" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_card" />
        </LinearLayout>

        </RelativeLayout>

</androidx.cardview.widget.CardView>